--- a/templates/Osnova.html
+++ b/templates/Osnova.html
@@ -60,13 +60,13 @@
                     </ul>
                 </td>
                 <td>
-                    <a  href="static/Book/Napolskih_Dmitrii_CHetyre_golosa_Tmy_(SI)_Litmir.net_674774_dce11.7z" download="Четыре голоса Тьмы (СИ)">
+                    <a charset="UTF-8" href="static/Book/Napolskih_Dmitrii_CHetyre_golosa_Tmy_(SI)_Litmir.net_674774_dce11.7z" download="Четыре голоса Тьмы (СИ)">
                         
                         <img id='img' style="width: 150px;" src="static/img/BC4_1585998617.jpg">
                     </a>
                 </td>
                 <td>
-                    <a href="static/Book/Lifanteva_Evgeniya_Iotun_Skadi__Delo_o_krache_artefaktov_(SI)_Litmir.net_674772_9f881.7z" download="Дело о краже артефактов (СИ)">
+                    <a charset="UTF-8" href="static/Book/Lifanteva_Evgeniya_Iotun_Skadi__Delo_o_krache_artefaktov_(SI)_Litmir.net_674772_9f881.7z" download="Дело о краже артефактов (СИ)">
                     <img id='img' style="width: 165px;" src="static/img/BC4_1585996098.jpg">
                     </a>
                 </td>
